darwin-rs/tui/src/snapshots/darwin_code_tui__app__tests__model_migration_prompt_shows_for_hidden_model.snap
---
source: tui/src/app.rs
expression: model_migration_copy_to_plain_text(&copy)
---
**Darwin-Code just got an upgrade. Introducing gpt-5.3-darwin-code.**

DarwinCode is now powered by gpt-5.3-darwin-code, our most capable agentic coding model yet. It's built for long-running, project-scale work, with mid-turn steering + frequent progress updates so you can collaborate while it runs (and it's faster too).

Learn more: https://openai.com/index/introducing-gpt-5-3-darwin-code/

You can keep using gpt-5.1-darwin-code if you prefer.
